Ticket #1524 (closed defect: fixed)

Opened 4 months ago

Last modified 4 months ago

libvlc: libvlc_media_list_player_play is broken

Reported by: littlejohn Assigned to:
Priority: normal Milestone: 0.9.0 bugs
Component: LibVLC Version: master
Severity: normal Keywords:
Cc: pdherbemont Platform(s): all
Difficulty: unknown Work status: Not started

Description

libvlc_media_list_player_play causes a sigsegv in pthread_mutex_lock:

C [libpthread.so.0+0x7550] pthread_mutex_lock+0x20 C [libvlc-control.so+0xf7e4] C [libvlc-control.so+0x100b0] libvlc_media_list_lock+0x32 C [libvlc-control.so+0x1110e] libvlc_media_list_player_next+0x20 C [libvlc-control.so+0x10dbb] libvlc_media_list_player_play+0x2e

This error is reproduced in org.videolan.jvlc.internal.MediaListPlayerTest?.mediaListPlayerPlayNoItemTest()

Attachments

hs_err_pid6942.log (73.2 kB) - added by littlejohn on 03/16/08 22:22:14.

Change History

03/16/08 22:22:14 changed by littlejohn

  • attachment hs_err_pid6942.log added.

03/16/08 23:02:33 changed by littlejohn

  • cc set to pdherbemont.

03/17/08 23:21:01 changed by littlejohn

  • status changed from new to closed.
  • resolution set to fixed.