check if media_list_player->media_list is null before locking - fixes #1524